--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant-TW">
+  <head>
+    <link rel="icon" href="/logo.svg" />
+    <title>三月兔－MarchHare Bakery</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～" />
+    <!-- Open Graph -->
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:title" content="三月兔－MarchHare Bakery" />
+    <meta property="og:site_name" content="三月兔－MarchHare Bakery" />
+    <meta property="og:image" content="https://i.imgur.com/cE2zXef.jpg" />
+    <meta
+      property="og:description"
+      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～" />
+  </head>
 
-<head>
-  <link rel="icon" href="/logo.svg">
-  <title>三月兔－MarchHare Bakery</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～">
-  <!-- Open Graph -->
-  <meta property="og:locale" content="zh_TW">
-  <meta property="og:title" content="三月兔－MarchHare Bakery" />
-  <meta property="og:site_name" content="三月兔－MarchHare Bakery" />
-  <meta property="og:image" content="https://i.imgur.com/cE2zXef.jpg" />
-  <meta property="og:description" content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～" />
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
