--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～" />
+      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～"
+    />
     <!-- Open Graph -->
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:title" content="三月兔－MarchHare Bakery" />
@@ -15,7 +16,8 @@
     <meta property="og:image" content="https://i.imgur.com/cE2zXef.jpg" />
     <meta
       property="og:description"
-      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～" />
+      content="三月兔（MarchHare Bakery）會為您帶來世界上最可愛的甜點！立即前往我們的商店，開啟一場夢幻般的甜點探索之旅吧～"
+    />
   </head>
 
   <body>
